--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
     "axios": "^0.24.0",
     "react": "17.0.2",
     "react-native": "0.66.4",
-    "react-native-safe-area-context": "^3.3.2",
+    "react-native-safe-area-context": "^4.1.2",
+    "react-native-screens": "^3.13.0",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1"
