[GIF LOADER IMPLEMENTED]

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -189,6 +189,15 @@ android {
 }
 
 dependencies {
+    // START For animated GIF support
+    implementation 'com.facebook.fresco:fresco:2.0.0'
+    implementation 'com.facebook.fresco:animated-gif:2.6.0'
+    // For WebP support, including animated WebP
+    implementation 'com.facebook.fresco:animated-webp:2.0.0'
+    implementation 'com.facebook.fresco:webpsupport:2.0.0' 
+    // END For animated GIF support
+
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
